--- a/ProgramaTeste/appsettings.json
+++ b/ProgramaTeste/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ANDERSON-PC2;Database=CadastroPessoasDB;Persist Security Info=True; Trusted_Connection=True; TrustServerCertificate=True; Integrated Security=True;MultipleActiveResultSets=True;"
+    //Alterar servidor local abaixo para o funcionamento do banco de dados
+    "DefaultConnection": "Data Source= //servidor local// ;Database=CadastroPessoasDB;Persist Security Info=True; Trusted_Connection=True; TrustServerCertificate=True; Integrated Security=True;MultipleActiveResultSets=True;"
   }
 }
